# ai-trading-architecture

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_Trading_Architecture.xlsx  ARCHITECTURE.md  Dockerfile  Makefile  PHASE1_PLAN.md  QUICKSTART.md  README.md  TECH_STACK.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_results.txt
.claude/: settings.local.json
config/: settings.yaml
config/grafana/: grafana.ini
config/grafana/dashboards/: trading_dashboard.json
config/grafana/datasources/: postgres.yaml  questdb.yaml
config/grafana/provisioning/: dashboards.yaml
docs/: ARCHITECTURE.md  grafana_setup.md  research-data-pipeline.md  research-execution.md
scripts/: init_observability_schema.py  setup.sh
src/: ai_cli.py  autotune.py  bot_base.py  cli.py  config.py  config_defaults.py  config_env.py  config_loader.py  config_sections.py  contracts.py  dashboard.py  dashboard_utils.py  logging_config.py  main.py  main_ai.py  main_full.py  reports.py  runtime_helpers.py  runtime_status.py  shared_utils.py
src/autotune/: __init__.py  metrics.py  optimizer.py
src/bot/: __init__.py  ai_trading_bot.py  full_trading_bot.py  maintenance.py  pipeline.py  services.py  trade_executor.py
src/config/: bot_state.json
src/dashboard_pages/: ai_debate.py  common.py  overview.py  settings.py  trade_analysis.py
src/data/: __init__.py  binance_connector.py  config.py  news_pipeline.py  quality_gates.py  questdb_writer.py  redis_cache.py
src/debate/: __init__.py  agents.py  debate_engine.py  dspy_infra.py  llm_client.py  models.py  optimizer.py  prompt_optimizer.py  prompts.py  runtime.py
src/execution/: __init__.py  dry_run.py  exchange_client.py  order_manager.py  position_sizer.py  trade_utils.py
src/memory/: __init__.py  analytics.py  fallback_store.py  interfaces.py  knowledge_graph.py  mem0_memory.py  schema.py  trade_memory.py  weekly_review.py
src/memory/review/: __init__.py
src/memory/review/sections/: __init__.py  action_items.py  best_worst_trades.py  pattern_analysis.py  reflection.py  (+2 more)
src/monitoring/: __init__.py  alert_formatter.py  telegram_bot.py  trading_logger.py
src/reports/: __init__.py  html.py  json.py  markdown.py  utils.py
src/risk/: __init__.py  kill_switch.py  risk_engine.py
src/strategy/: __init__.py  backtest.py  base.py  bbands.py  indicator_utils.py  metrics.py  mock_runtime.py  optimizer.py  sma_cross.py
tests/: test_autotune.py  test_bot_base.py  test_compile_smoke.py  test_config_env.py  test_dashboard_utils.py  test_main_cli.py
tests/dashboard_pages/: test_common.py
tests/data/: test_binance_connector.py  test_data_config.py  test_news_pipeline.py  test_quality_gates.py  test_questdb_writer.py
tests/debate/: test_debate_engine_cache.py  test_dspy_optimizer.py  test_llm_client.py  test_risk_prompt_config.py  test_runtime.py
tests/execution/: test_audit_logging.py  test_ccxt_integration.py  test_dry_run.py  test_exchange_client_unit.py  test_kill_switch.py  test_main_dryrun.py  test_main_full_backtest.py  test_main_full_knowledge_graph.py  test_market_data_sources.py  test_order_manager_live.py  test_position_sizer.py  test_risk_engine.py  test_sltp_integration.py
tests/memory/: test_analytics.py  test_knowledge_graph.py  test_memory_integrations.py  test_memory_optimizations.py  test_trade_memory_interface.py  test_weekly_review.py
tests/monitoring/: test_alert_formatter.py  test_full_bot_alerts.py  test_telegram_bot.py
tests/strategy/: test_base_strategy.py  test_metrics.py  test_strategy_support.py
